# whisper_rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  factory.rs  main.rs
src/controllers/: mod.rs  stt_controller.rs  vad_controller.rs
src/models/: api_models.rs  mod.rs  silero.rs  whisper_model.rs
src/routes/: routes.rs
src/services/: audio_converter.rs  mod.rs  resampler.rs  silero.rs  stt.rs  whisper.rs
src/utils/: mod.rs  session.rs  utils.rs  vad_iter.rs
src/websockets/: mod.rs  stt.rs  vad.rs
