#Cargo.toml
[package]
name = "STT"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4.0"   # Add runtime explicitly
actix = "0.13.5"
actix-ws = "0.2.5"
actix-web-actors = "4.3.1"

# ML/AI
whisper-rs = "0.10.0"
silero-vad-rs = "0.1.0"
ort = { version = "2.0.0-rc.2",features = ["download-binaries", "ndarray"] }
rubato = "0.14.1"
dasp = { version = "0.11", features = ["signal", "interpolate", "interpolate-linear"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3.31"
once_cell = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
dashmap = "5.4"
anyhow = "1.0.98"
hound = "3.5.0"
chrono = { version = "0.4", features = ["serde"] }
ndarray = {version = "0.16"}

# Logging
log = "0.4"
env_logger = "0.10"

# Configuration
dotenv = "0.15"

# Optional: Validation
validator = { version = "0.16", features = ["derive"] }

#simd
wide = "0.7.5" 